# Project

./: .env.local  .gitignore  Untitled-1.py  Updatefile.py  ramdomgame.py
.vercel/: project.json
Python/: .gitignore  CODE_GENERATOR_README.md  LuyenTap.py  Rock, paper, scissors.py  Updatefile.py  app.py  code_generator.py  countdown timer.py  dictionary.py  file.pyw  gui_app.pyw  pass.py  practice_lesson.py  practice_lesson2..py  test.py  test_code_generator.py
Python/Cospro/: Calculate Minimum Travel Distance.py  Calculate Room Humidity and Temperature.py  Check the systematic relationship.py  Minimum waiting time.py  Number With Difference.py  Number of Days in Month.py  Palindrome.py  Revenue Growth.py  Sort books by code.py  Swap O and X.py  catch fish.py
Python/CreFileCode/: code_generator_gui.py
Python/LeetCode/: Closest Dessert Cost.py  Count Unhappy Friends.py  Make The String Great.py  (+5 more)
Web/: index.css  main.html
auto-sorter/: README.md  build_exe.py  pyproject.toml  requirements.txt  setup.cfg
auto-sorter-gui/: README.md  pyproject.toml  requirements.txt  setup.py
auto-sorter-gui/src/autosorter/: __init__.py  config.py  gui.py  main.py  sorter.py  utils.py  watcher.py
auto-sorter-gui/tests/: test_sorter.py  test_watcher.py
auto-sorter/docs/: usage.md
auto-sorter/setup/: README.md  windows_startup.bat
auto-sorter/src/: sort.py
auto-sorter/src/autosorter/: __init__.py  config.py  main.py  mover.py  systray.py  utils.py  watcher.py
auto-sorter/src/scripts/: windows_startup.py
auto-sorter/tests/: test_mover.py  test_watcher.py
(+27 files in other folders)
