[tool.poetry]
name = "auto-sorter-gui"
version = "0.1.0"
description = "A GUI application for automatically sorting files based on their extensions."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"
watchdog = "^2.1.6"
plyer = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"