[metadata]
name = auto-sorter
version = 0.1.0
description = An automatic file sorter that organizes files based on their extensions.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/auto-sorter
license = MIT

[options]
packages = find:
install_requires =
    watchdog
    plyer
    infi.systray

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    auto-sorter = autosorter.main:main